--- a/view/src/components/Login/Login.css
+++ b/view/src/components/Login/Login.css
@@ -45,8 +45,13 @@
     cursor: pointer;
 }
 
+.form-submit:hover{
+    background-color: rgba(255, 153, 0, 0.5);
+}
 
 .form-link{
     color: #FF9900;
     text-decoration: none;
 }
+
+
